--- a/tools/tools/npe/Makefile
+++ b/tools/tools/npe/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-#	$FreeBSD: stable/10/tools/tools/npe/Makefile 192661 2009-05-23 19:16:34Z sam $
+#	$FreeBSD$
 
 SUBDIR=	npestats
 
