--- a/tools/tools/pirtool/Makefile
+++ b/tools/tools/pirtool/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-#	$FreeBSD: stable/10/tools/tools/pirtool/Makefile 276486 2014-12-31 23:25:37Z ngie $
+#	$FreeBSD$
 
 PROG=   pirtool
 SRCS=   pirtool.c
