--- a/tools/tools/vhba/faulty/Makefile
+++ b/tools/tools/vhba/faulty/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/tools/tools/vhba/faulty/Makefile 208926 2010-06-08 22:26:47Z mjacob $
+# $FreeBSD$
 KMOD=	vfaulty
 SRCS=	vhba_faulty.c vhba.c
 CFLAGS += -I${.CURDIR}/.. -DVHBA_MOD=\"vfaulty\"
