--- a/tools/tools/vimage/Makefile
+++ b/tools/tools/vimage/Makefile
@@ -1,9 +1,7 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/tools/tools/vimage/Makefile 196409 2009-08-20 22:39:20Z zec $
+# $FreeBSD$
 
 PROG=	vimage
-LDADD=	-ljail
-DPADD=	${LIBJAIL}
+LIBADD=	jail
 
 WARNS?=	2
 CFLAGS+= -I../../../sys
