--- a/usr.bin/at/Makefile
+++ b/usr.bin/at/Makefile
@@ -1,8 +1,10 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/usr.bin/at/Makefile 226420 2011-10-16 07:57:01Z ed $
+# $FreeBSD$
 
 .include "${.CURDIR}/Makefile.inc"
 
+CONFS=	atrun
+CONFSDIR=	/etc/cron.d
+CONFSNAME=	at
 PROG=	at
 SRCS=	at.c panic.c parsetime.c perm.c
 LINKS=	${BINDIR}/at ${BINDIR}/atq \
