--- a/usr.bin/basename/Makefile
+++ b/usr.bin/basename/Makefile
@@ -1,13 +1,12 @@
 #	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/11/usr.bin/basename/Makefile 272779 2014-10-09 00:41:42Z ngie $
+# $FreeBSD$
 
 .include <src.opts.mk>
 
 PROG=	basename
 MLINKS=	basename.1 dirname.1
 
-.if ${MK_TESTS} != "no"
-SUBDIR+=	tests
-.endif
+HAS_TESTS=
+SUBDIR.${MK_TESTS}+= tests
 
 .include <bsd.prog.mk>
