--- a/usr.bin/bc/Makefile
+++ b/usr.bin/bc/Makefile
@@ -1,4 +1,4 @@
-#	$FreeBSD: stable/11/usr.bin/bc/Makefile 275042 2014-11-25 14:29:10Z bapt $
+#	$FreeBSD$
 #	$OpenBSD: Makefile,v 1.7 2013/09/19 16:12:00 otto Exp $
 
 PROG=		bc
