--- a/usr.bin/bluetooth/Makefile.inc
+++ b/usr.bin/bluetooth/Makefile.inc
@@ -1,4 +1,4 @@
-# $FreeBSD: stable/11/usr.bin/bluetooth/Makefile.inc 314007 2017-02-21 02:23:57Z ngie $
+# $FreeBSD$
 
 .include "${SRCTOP}/usr.bin/Makefile.inc"
 
