--- a/tools/tools/vhba/lots/Makefile
+++ b/tools/tools/vhba/lots/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/tools/tools/vhba/lots/Makefile 208926 2010-06-08 22:26:47Z mjacob $
+# $FreeBSD$
 KMOD=	vlots
 SRCS=	vhba_lots.c vhba.c
 CFLAGS += -I${.CURDIR}/.. -DVHBA_MOD=\"vlots\"
