--- a/tools/tools/whereintheworld/Makefile
+++ b/tools/tools/whereintheworld/Makefile
@@ -1,4 +1,4 @@
-# $FreeBSD: src/tools/tools/whereintheworld/Makefile,v 1.1 2003/01/09 12:23:29 des Exp $
+# $FreeBSD$
 
 SCRIPTS=	whereintheworld.pl
 
