--- a/tools/tools/wtap/wtap/Makefile
+++ b/tools/tools/wtap/wtap/Makefile
@@ -1,5 +1,4 @@
-# $MidnightBSD$
-# $FreeBSD: stable/10/tools/tools/wtap/wtap/Makefile 276486 2014-12-31 23:25:37Z ngie $
+# $FreeBSD$
 
 BINDIR?=	/usr/local/bin
 PROG=	wtap
