--- a/usr.bin/banner/Makefile
+++ b/usr.bin/banner/Makefile
@@ -1,6 +1,5 @@
-# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
-# $FreeBSD: stable/10/usr.bin/banner/Makefile 90415 2002-02-08 22:31:43Z markm $
+# $FreeBSD$
 
 PROG=	banner
 MAN=	banner.6
