--- a/usr.bin/bluetooth/bthost/Makefile
+++ b/usr.bin/bluetooth/bthost/Makefile
@@ -1,5 +1,5 @@
 # $Id: Makefile,v 1.4 2003/08/14 20:07:13 max Exp $
-# $FreeBSD: stable/11/usr.bin/bluetooth/bthost/Makefile 275042 2014-11-25 14:29:10Z bapt $
+# $FreeBSD$
 
 PROG=		bthost
 
