--- a/usr.bin/bluetooth/btsockstat/Makefile
+++ b/usr.bin/bluetooth/btsockstat/Makefile
@@ -1,5 +1,5 @@
 # $Id: Makefile,v 1.7 2003/08/14 20:07:14 max Exp $
-# $FreeBSD: stable/11/usr.bin/bluetooth/btsockstat/Makefile 275042 2014-11-25 14:29:10Z bapt $
+# $FreeBSD$
 
 PROG=		btsockstat
 WARNS?=		2
