--- a/usr.bin/bluetooth/rfcomm_sppd/Makefile
+++ b/usr.bin/bluetooth/rfcomm_sppd/Makefile
@@ -1,5 +1,5 @@
 # $Id: Makefile,v 1.7 2003/09/07 18:15:55 max Exp $
-# $FreeBSD: stable/11/usr.bin/bluetooth/rfcomm_sppd/Makefile 275042 2014-11-25 14:29:10Z bapt $
+# $FreeBSD$
 
 PROG=		rfcomm_sppd
 SRCS=		rfcomm_sppd.c rfcomm_sdp.c
