--- a/release/tools/vagrant.conf
+++ b/release/tools/vagrant.conf
@@ -3,6 +3,9 @@
 # $MidnightBSD$
 #
 
+# The default of 3GB is too small for Vagrant, so override the size here.
+export VMSIZE=8G
+
 # Packages to install into the image we're creating.  This is a deliberately
 # minimalist set, providing only the packages necessary to bootstrap.
 export VM_EXTRA_PACKAGES="firstboot-midnightbsd-update firstboot-pkgs"
