--- a/usr.sbin/bsdinstall/scripts/Makefile
+++ b/usr.sbin/bsdinstall/scripts/Makefile
@@ -1,6 +1,7 @@
-SCRIPTS= auto adduser checksum config entropy hardening hostname jail \
-	 keymap mirrorselect mount netconfig netconfig_ipv4 netconfig_ipv6 \
-	 rootpass script services time umount wlanconfig zfsboot
+SCRIPTS= auto adduser bootconfig checksum config entropy hardening \
+	 hostname jail keymap mirrorselect mount netconfig netconfig_ipv4 \
+	 netconfig_ipv6 rootpass script services time umount wlanconfig \
+	 zfsboot
 BINDIR= ${LIBEXECDIR}/bsdinstall
 
 MAN=
