--- a/usr.sbin/wpa/wpa_priv/Makefile
+++ b/usr.sbin/wpa/wpa_priv/Makefile
@@ -1,16 +1,15 @@
-# $FreeBSD: stable/11/usr.sbin/wpa/wpa_priv/Makefile 319190 2017-05-30 04:45:11Z ngie $
+# $FreeBSD$
 
 .include "../Makefile.inc"
 
-.PATH.c:${WPA_SUPPLICANT_DISTDIR} \
-	${WPA_DISTDIR}/src/drivers
+.include "../Makefile.crypto"
+
+.PATH.c:${WPA_SUPPLICANT_DISTDIR}
 
 PROG=	wpa_priv
-SRCS=	drivers.c os_unix.c eloop.c common.c wpa_debug.c wpabuf.c wpa_priv.c \
-	driver_common.c l2_packet_freebsd.c
+SRCS=	os_unix.c eloop.c common.c wpa_debug.c wpabuf.c wpa_priv.c \
+	l2_packet_freebsd.c
 
-LIBADD=	pcap
-
-.include "../Makefile.crypto"
+LIBADD+=pcap wpadrivers
 
 .include <bsd.prog.mk>
