--- a/release/tools/ec2.conf
+++ b/release/tools/ec2.conf
@@ -17,7 +17,7 @@ if [ "${TARGET_ARCH}" = "amd64" ]; then
 fi
 
 # Set to a list of third-party software to enable in rc.conf(5).
-export VM_RC_LIST="ec2_configinit ec2_fetchkey ec2_ephemeralswap ec2_loghostkey firstboot_midnightbsd_update firstboot_pkgs ntpd"
+export VM_RC_LIST="ec2_configinit ec2_fetchkey ec2_loghostkey firstboot_midnightbsd_update firstboot_pkgs ntpd dev_aws_disk"
 
 # Build with a 3.9 GB UFS partition; the growfs rc.d script will expand
 # the partition to fill the root disk after the EC2 instance is launched.
