--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -1270,6 +1270,8 @@ __installcheck_DESTDIR: .PHONY
 #
 CHECK_UIDS=	auditdistd
 CHECK_GIDS=	audit
+CHECK_UIDS+=	_ntp
+CHECK_GIDS+=	_ntp
 CHECK_UIDS+=	proxy
 CHECK_GIDS+=	proxy authpf
 CHECK_UIDS+=	smmsp
