ncursesw is gone. (reapply from botched merge)

--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2296,7 +2296,6 @@ _bt_clean=	${CLEANDIR}
     ${LOCAL_TOOL_DIRS} \
     ${_jevents} \
     lib/ncurses/ncurses \
-    lib/ncurses/ncursesw \
     ${_rescue} \
     ${_share} \
     usr.bin/awk \
@@ -2677,7 +2676,7 @@ _prebuild_libs=	${_kerberos5_lib_libasn1} \
 		${_lib_libgssapi} \
 		lib/libkiconv lib/libkvm lib/liblzma lib/libmd lib/libnv \
 		${_lib_casper} \
-		lib/ncurses/ncurses lib/ncurses/ncursesw \
+		lib/ncurses/ncurses \
 		lib/libopie lib/libpam/libpam ${_lib_libthr} \
 		${_lib_libradius} lib/libsbuf lib/libtacplus \
 		lib/libgeom \
@@ -2700,7 +2699,7 @@ gnu/lib/libsupc++__L: gnu/lib/libstdc++__L
 
 .if ${MK_DIALOG} != "no"
 _prebuild_libs+= gnu/lib/libdialog
-gnu/lib/libdialog__L: lib/msun__L lib/ncurses/ncursesw__L
+gnu/lib/libdialog__L: lib/msun__L lib/ncurses/ncurses__L
 .endif
 
 .if ${MK_LIBCPLUSPLUS} != "no"
