--- a/Makefile.libcompat
+++ b/Makefile.libcompat
@@ -143,7 +143,7 @@ _LC_LIBDIRS.${MK_KERBEROS:tl}+=	kerberos5/lib
 
 _LC_INCDIRS=	\
 		include \
-		lib/ncurses/ncursesw \
+		lib/ncurses/ncurses \
 		${_LC_LIBDIRS.yes}
 
 .if ${MK_FILE} != "no"
@@ -192,7 +192,7 @@ build${libcompat}: .PHONY
 	    DIRPRFX=${_dir}/ ${_t}
 .endfor
 .endfor
-.for _dir in lib/ncurses/ncurses lib/ncurses/ncursesw ${_libmagic} ${_jevents}
+.for _dir in lib/ncurses/ncurses ${_libmagic} ${_jevents}
 .for _t in ${_obj} build-tools
 	${_+_}cd ${.CURDIR}/${_dir}; \
 	    WORLDTMP=${WORLDTMP} \
