--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2690,8 +2690,8 @@ _prebuild_libs=	${_kerberos5_lib_libasn1} \
 		lib/libutil lib/libpjdlog ${_lib_libypclnt} lib/libz lib/msun \
 		${_secure_lib_libcrypto} ${_secure_lib_libssl} ${_secure_lib_libmj} \
 		${_lib_libldns} ${_secure_lib_libssh} \
-		lib/libblocksruntime lib/libarchive lib/libfetch lib/libsqlite3 \
-		lib/libdispatch lib/libmagic lib/libucl
+		lib/libarchive lib/libfetch lib/libsqlite3 \
+		lib/libmagic lib/libucl
 .if ${MK_GNUCXX} != no
 _prebuild_libs+= gnu/lib/libstdc++ gnu/lib/libsupc++
 gnu/lib/libstdc++__L: lib/msun__L
