--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -2251,7 +2251,7 @@ ${_bt}-${_tool}: .PHONY .MAKE
 	${_+_}@${ECHODIR} "===> ${_tool} (obj,all,install)"; \
 		cd ${.CURDIR}/${_tool}; \
 		if [ -z "${NO_OBJWALK}" ]; then ${MAKE} DIRPRFX=${_tool}/ obj; fi; \
-		mkdir -p ${WORLDTMP}/usr/include/xlocale; \
+		mkdir -p ${WORLDTMP}/usr/include/xlocale ${WORLDTMP}/usr/include/sys/disk; \
 		${MAKE} DIRPRFX=${_tool}/ all; \
 		${MAKE} DIRPRFX=${_tool}/ DESTDIR=${WORLDTMP}/legacy install
 
