--- a/gnu/usr.bin/Makefile
+++ b/gnu/usr.bin/Makefile
@@ -8,7 +8,7 @@ SUBDIR.${MK_GCC}+=	gperf
 SUBDIR.${MK_BINUTILS}+=	binutils
 SUBDIR.${MK_DIALOG}+=	dialog
 SUBDIR.${MK_GCC}+=	cc
-SUBDIR.${MK_GNU_DIFF}+=	diff3
+SUBDIR.${MK_GNU_DIFF}+=	diff
 SUBDIR.${MK_GNU_GREP}+=	grep
 SUBDIR.${MK_GDB}+=	gdb
 SUBDIR_DEPEND_gdb=	binutils
