update defaults to match older midnightbsd releases.

--- a/libexec/rc/rc.conf
+++ b/libexec/rc/rc.conf
@@ -15,7 +15,6 @@
 # For a more detailed explanation of all the rc.conf variables, please
 # refer to the rc.conf(5) manual page.
 #
-# $FreeBSD$
 
 ##############################################################
 ###  Important initial Boot-time options  ####################
@@ -48,7 +47,7 @@ kldxref_enable="YES"	# Build linker.hints files with kldxref(8).
 kldxref_clobber="NO"	# Overwrite old linker.hints at boot.
 kldxref_module_path=""	# Override kern.module_path. A ';'-delimited list.
 powerd_enable="NO" 	# Run powerd to lower our power usage.
-powerd_flags=""		# Flags to powerd (if enabled).
+powerd_flags="-a adaptive -b adaptive"		# Flags to powerd (if enabled).
 tmpmfs="AUTO"		# Set to YES to always create an mfs /tmp, NO to never
 tmpsize="20m"		# Size of mfs /tmp if created
 tmpmfs_flags="-S"	# Extra mdmfs options for the mfs /tmp
@@ -128,16 +127,21 @@ synchronous_dhclient="NO"	# Start dhclient directly on configured
 				# interfaces during startup.
 defaultroute_delay="30"		# Time to wait for a default route on a DHCP interface.
 defaultroute_carrier_delay="5"	# Time to wait for carrier while waiting for a default route.
+dhcp6c_enable="NO"		# Set to YES to use DHCP over IPv6
+dhcp6c_config="/etc/dhcp6c.conf"	# Path to dhcp6c configuration 
+dhcp6c_interfaces=""		# Set it to the network interface(s) 
+				# where dhcp6c should work on.
+dhcp6c_flags=""			# Extra flags to pass to dhcp6c
 netif_enable="YES"		# Set to YES to initialize network interfaces
 netif_ipexpand_max="2048"	# Maximum number of IP addrs in a range spec.
 wpa_supplicant_program="/usr/sbin/wpa_supplicant"
 wpa_supplicant_flags="-s"	# Extra flags to pass to wpa_supplicant
 wpa_supplicant_conf_file="/etc/wpa_supplicant.conf"
 #
-firewall_enable="NO"		# Set to YES to enable firewall functionality
+firewall_enable="YES"		# Set to YES to enable firewall functionality
 firewall_script="/etc/rc.firewall" # Which script to run to set up the firewall
-firewall_type="UNKNOWN"		# Firewall type (see /etc/rc.firewall)
-firewall_quiet="NO"		# Set to YES to suppress rule display
+firewall_type="DESKTOP"		# Firewall type (see /etc/rc.firewall)
+firewall_quiet="YES"		# Set to YES to suppress rule display
 firewall_logging="NO"		# Set to YES to enable events logging
 firewall_logif="NO"		# Set to YES to create logging-pseudo interface
 firewall_flags=""		# Flags passed to ipfw when type is a file
@@ -296,6 +300,8 @@ local_unbound_enable="NO"	# Local caching resolver
 local_unbound_tls="NO"		# Use DNS over TLS
 blacklistd_enable="NO"		# Run blacklistd daemon (YES/NO).
 blacklistd_flags=""		# Optional flags for blacklistd(8).
+mdnsd_enable="NO"		# Run mdnsd, multicast DNS (or NO).
+mdnsresponder_enable="NO"	# Run mdnsresponder (or NO).
 resolv_enable="YES"		# Enable resolv / resolvconf
 
 #
@@ -384,27 +390,12 @@ nfsuserd_flags=""		# Flags for nfsuserd
 ### Network Time Services options: ###
 timed_enable="NO"		# Run the time daemon (or NO).
 timed_flags=""			# Flags to timed (if enabled).
-ntpdate_enable="NO"		# Run ntpdate to sync time on boot (or NO).
-ntpdate_program="/usr/sbin/ntpdate"	# path to ntpdate, if you want a different one.
-ntpdate_flags="-b"		# Flags to ntpdate (if enabled).
-ntpdate_config="/etc/ntp.conf"	# ntpdate(8) configuration file
-ntpdate_hosts=""		# Whitespace-separated list of ntpdate(8) servers.
 ntpd_enable="NO"		# Run ntpd Network Time Protocol (or NO).
 ntpd_program="/usr/sbin/ntpd"	# path to ntpd, if you want a different one.
-ntpd_config="/etc/ntp.conf"	# ntpd(8) configuration file
 ntpd_sync_on_start="NO"		# Sync time on ntpd startup, even if offset is high
-ntpd_flags=""			# Additional flags to ntpd
-ntp_src_leapfile="/etc/ntp/leap-seconds"
-				# Initial source for ntpd leapfile
-ntp_db_leapfile="/var/db/ntpd.leap-seconds.list"
-				# Working copy (updated weekly) leapfile
-ntp_leapfile_sources="https://www.ietf.org/timezones/data/leap-seconds.list"
-				# Source from which to fetch leapfile
-ntp_leapfile_fetch_opts="-mq"	# Options to use for ntp leapfile fetch,
-				# e.g. --no-verify-peer
-ntp_leapfile_expiry_days=30	# Check for new leapfile 30 days prior to
-				# expiry.
-ntp_leapfile_fetch_verbose="NO"	# Be verbose during NTP leapfile fetch
+ntpd_flags=""			# Flags to ntpd (if enabled).
+rdate_enable="NO"		# Run rdate to sync time on system startup.
+rdate_flags=""			# use: [RFC868-host] or [-n RFC2030-host]
 
 # Network Information Services (NIS) options: All need rpcbind_enable="YES" ###
 nis_client_enable="NO"		# We're an NIS client (or NO).
@@ -697,7 +688,7 @@ devfs_system_ruleset=""	# The name (NOT number) of a ruleset to apply to /dev
 devfs_set_rulesets=""	# A list of /mount/dev=ruleset_name settings to
 			# apply (must be mounted already, i.e. fstab(5))
 devfs_load_rulesets="YES"	# Enable to always load the default rulesets
-performance_cx_lowest="NONE"	# Online CPU idle state
+performance_cx_lowest="C2"	# Online CPU idle state
 performance_cpu_freq="NONE"	# Online CPU frequency
 economy_cx_lowest="Cmax"	# Offline CPU idle state
 economy_cpu_freq="NONE"		# Offline CPU frequency
@@ -763,7 +754,7 @@ if [ -z "${source_rc_confs_defined}" ]; then
 	}
 fi
 
-# Allow vendors to override FreeBSD defaults in /etc/default/rc.conf
+# Allow vendors to override MidnightBSD defaults in /etc/default/rc.conf
 # without the need to carefully manage /etc/rc.conf.
 if [ -r /etc/defaults/vendor.conf ]; then
 	. /etc/defaults/vendor.conf
