libexec/rc: Add var_run rc script
Users with a tmpfs /var/run will lose the directory tree state of
/var/run at reboot. This rc script will optionally (by default)
capture the state of the directory structure in /var/run prior to
shutdown and recreate it at system boot.

Alternatively a user can save the state of the /var/run directories
manually using service var_run save and disable the autosaving of
/var/run state using the var_run_autosave variable, for those
paranoid SSD users.

PR:			259585, 259699
Reported by:		freebsd@walstatt-de.de,
Reviewed by:		philip, gbe (previous version)
Differential Revision:	https://reviews.freebsd.org/D36386

(cherry picked from commit 27b9777c28b4e9474bdc500c28d04feec48fbb84)

--- a/etc/mtree/BSD.var.dist
+++ b/etc/mtree/BSD.var.dist
@@ -43,6 +43,10 @@
         ..
         midnightbsd-update  mode=0700
         ..
+        mtree
+        ..
+        ntp             uname=ntpd gname=ntpd
+        ..
         mport
             downloads
             ..
