--- a/usr.bin/bmake/Makefile.config
+++ b/usr.bin/bmake/Makefile.config
@@ -1,26 +1,26 @@
-# $MidnightBSD$
 # This is a generated file, do NOT edit!
 # See contrib/bmake/bsd.after-import.mk
 #
-# $FreeBSD: stable/10/usr.bin/bmake/Makefile.config 276305 2014-12-27 16:43:22Z ngie $
 
 SRCTOP?= ${.CURDIR:H:H}
 
 # things set by configure
 
-prefix= /usr
+_MAKE_VERSION?=20200710
+
+prefix?= /usr
 srcdir= ${SRCTOP}/contrib/bmake
-CC?= gcc
-DEFAULT_SYS_PATH= .../share/mk:/usr/share/mk
+CC?= cc
+DEFAULT_SYS_PATH?= .../share/mk:/usr/share/mk
 
 CPPFLAGS+= 
 CFLAGS+= ${CPPFLAGS} -DHAVE_CONFIG_H
-LDFLAGS= 
-LIBOBJS=  ${LIBOBJDIR}stresep$U.o
-LDADD= 
-USE_META= yes
-FILEMON_H= /usr/include/dev/filemon/filemon.h
+LDFLAGS+= 
+LIBOBJS+=  ${LIBOBJDIR}stresep$U.o
+LDADD+= 
+USE_META?= yes
+USE_FILEMON?= dev
+FILEMON_H?= /usr/include/dev/filemon/filemon.h
 BMAKE_PATH_MAX?= 1024
 # used if MAXPATHLEN not defined
 CPPFLAGS+= -DBMAKE_PATH_MAX=${BMAKE_PATH_MAX}
-
