add some missing directories.

--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -1466,21 +1466,13 @@
         ..
         openssl
             man
-/set uname=man
-                cat1
-                ..
-                cat3
-                ..
-                en.ISO8859-1    uname=root
-                    cat1
-                    ..
-                    cat3
-                    ..
-                ..
-/set uname=root
                 man1
                 ..
                 man3
+                ..
+                man5
+                ..
+                man7
                 ..
             ..
         ..
