--- a/etc/mtree/BSD.usr.dist
+++ b/etc/mtree/BSD.usr.dist
@@ -25,6 +25,8 @@
                     ..
                 ..
             ..
+            sqlite3
+            ..
             ucl
             ..
             zstd
