--- a/share/zoneinfo/Makefile
+++ b/share/zoneinfo/Makefile
@@ -18,7 +18,7 @@ LEAPFILE=
 
 TZFILES=	africa antarctica asia australasia etcetera europe \
 		factory northamerica southamerica
-TZFILES+=	backward systemv
+TZFILES+=	backward
 POSIXRULES=	America/New_York
 
 TZFILES:=	${TZFILES:S/^/${CONTRIBDIR}/}
@@ -38,8 +38,7 @@ TZBUILDSUBDIRS=	\
 		Etc \
 		Europe \
 		Indian \
-		Pacific \
-		SystemV
+		Pacific
 TZBUILDSUBDIRS+= US Mexico Chile Canada Brazil
 
 .if !defined(_SKIP_BUILD)
@@ -47,12 +46,12 @@ all: zoneinfo
 .endif
 META_TARGETS+=	zoneinfo install-zoneinfo
 
-zoneinfo: yearistype ${TDATA}
+zoneinfo: ${TDATA}
 	mkdir -p ${TZBUILDDIR}
 	cd ${TZBUILDDIR}; mkdir -p ${TZBUILDSUBDIRS}
 	umask 022; cd ${.CURDIR}; \
 	zic -D -d ${TZBUILDDIR} -p ${POSIXRULES} -m ${NOBINMODE} \
-	    ${LEAPFILE} -y ${.OBJDIR}/yearistype ${TZFILES}
+	    ${LEAPFILE} ${TZFILES}
 
 beforeinstall: install-zoneinfo
 install-zoneinfo:
