--- a/Makefile.aut
+++ b/Makefile.aut
@@ -3,7 +3,7 @@
 EMAIL = bug-less@gnu.org
 HOMEPAGE = http://www.greenwoodsoftware.com/less
 SHELL = /bin/sh
-RCS = rcs
+GIT = git
 NROFF = nroff -man
 
 srcdir = .
@@ -14,25 +14,29 @@ SRC = \
 	help.c ifile.c input.c jump.c line.c linenum.c \
 	lsystem.c mark.c optfunc.c option.c opttbl.c os.c \
 	output.c pattern.c position.c prompt.c search.c signal.c \
-	tags.c ttyin.c version.c  
+	tags.c ttyin.c version.c
 DISTFILES_W = \
 	defines.ds  Makefile.dsb Makefile.dsg Makefile.dsu \
 	defines.o2  Makefile.o2e \
 	defines.o9  Makefile.o9c Makefile.o9u \
-	defines.wn  Makefile.wnm Makefile.wnb
+	defines.wn  Makefile.wnm Makefile.wnb \
+	configure 
+UNICODE_FILES = \
+	compose.uni fmt.uni ubin.uni wide.uni
 DISTFILES = \
 	${SRC} regexp.c regexp.h \
 	COPYING INSTALL LICENSE Makefile.in Makefile.aut NEWS README \
-	configure configure.ac lesskey.c lessecho.c scrsize.c \
+	configure.ac lesskey.c lessecho.c scrsize.c \
 	charset.h cmd.h funcs.h lglob.h less.h lesskey.h option.h \
 	pckeys.h pattern.h position.h \
 	install.sh defines.h.in mkinstalldirs \
 	less.nro less.man lesskey.nro lesskey.man lessecho.nro lessecho.man \
 	less.hlp \
-	mkfuncs.awk mkhelp.c \
+	mkfuncs.pl mkhelp.pl \
+	mkutable $(UNICODE_FILES) \
 	${DISTFILES_W}
 
-all: help.c funcs.h ${srcdir}/configure 
+all: help.c funcs.h $(UNICODE_FILES) ${srcdir}/configure 
 
 release: .FORCE
 	${MAKE} -f Makefile.aut tagall 
@@ -42,14 +46,11 @@ release: .FORCE
 
 .FORCE:
 
-help.c: less.hlp mkhelp
+help.c: less.hlp 
 	-mv -f ${srcdir}/help.c ${srcdir}/help.c.old
 	rm -rf help.c
-	./mkhelp < less.hlp > help.c
-	if cmp -s help.c help.c.old; then mv help.c.old help.c; fi
-
-mkhelp: mkhelp.c
-	${CC} -o mkhelp mkhelp.c
+	${srcdir}/mkhelp.pl < less.hlp > help.c
+	if cmp -s help.c help.c.old; then mv -f help.c.old help.c; fi
 
 ${srcdir}/configure: ${srcdir}/configure.ac \
 		${srcdir}/Makefile.in
@@ -57,8 +58,8 @@ ${srcdir}/configure: ${srcdir}/configure.ac \
 
 funcs.h: ${SRC:%=${srcdir}/%}
 	-mv -f ${srcdir}/funcs.h ${srcdir}/funcs.h.old
-	awk -f ${srcdir}/mkfuncs.awk ${SRC:%=${srcdir}/%} >${srcdir}/funcs.h
-	if cmp -s funcs.h funcs.h.old; then mv funcs.h.old funcs.h; fi
+	perl ${srcdir}/mkfuncs.pl ${SRC:%=${srcdir}/%} >${srcdir}/funcs.h
+	if cmp -s funcs.h funcs.h.old; then mv -f funcs.h.old funcs.h; fi
 
 lint:
 	lint -I. ${CPPFLAGS} ${SRC}
@@ -75,6 +76,7 @@ REPLACE_VERSION = \
 	@REL=`sed -e '/char version/!d' -e 's/[^0-9.]*\([0-9.]*\).*/\1/' -e q ${srcdir}/version.c`; \
 	DT=`date '+%d %h %Y'`; \
 	echo "Stuffing version number $$REL into $@"; \
+	rm -f $@; \
 	sed \
 		-e "s;@@VERSION@@;$$REL;" \
 		-e "s;@@DATE@@;$$DT;" \
@@ -101,6 +103,21 @@ ${srcdir}/lesskey.man: ${srcdir}/lesskey.nro
 ${srcdir}/lessecho.man: ${srcdir}/lessecho.nro
 	${NROFF} ${srcdir}/lessecho.nro >${srcdir}/lessecho.man
 
+compose.uni: unicode/UnicodeData.txt
+	./mkutable -f2 Mn Me -- unicode/UnicodeData.txt > $@
+fmt.uni: unicode/UnicodeData.txt
+	./mkutable -f2 Cf -- unicode/UnicodeData.txt > $@
+ubin.uni: unicode/UnicodeData.txt
+	./mkutable -f2 Cc Cs Co Zl Zp -- unicode/UnicodeData.txt > $@
+wide.uni: unicode/EastAsianWidth.txt
+	./mkutable -f1 W F -- unicode/EastAsianWidth.txt > $@
+
+unicode/UnicodeData.txt:
+	mkdir -p unicode
+	curl -s -o $@ ftp://ftp.unicode.org/Public/UNIDATA/UnicodeData.txt
+unicode/EastAsianWidth.txt:
+	mkdir -p unicode
+	curl -s -o $@ ftp://ftp.unicode.org/Public/UNIDATA/EastAsianWidth.txt
 
 distfiles: ${DISTFILES}
 
@@ -114,11 +131,12 @@ dist: ${DISTFILES}
 	for file in ${DISTFILES}; do \
 	  ./add_copyright $$file $$REL; \
 	done; \
-	cd $$REL; chmod +w ${DISTFILES_W}; cd ..; \
+	cd $$REL; chmod -w *; chmod +w ${DISTFILES_W}; chmod +x configure; cd ..; \
 	echo "Creating release/$$REL/$$REL.tar.gz"; \
 	tar -cf - $$REL | gzip -c >release/$$REL/$$REL.tar.gz; \
 	echo "Signing release/$$REL/$$REL.tar.gz"; \
 	gpg --detach-sign release/$$REL/$$REL.tar.gz; \
+	mv release/$$REL/$$REL.tar.gz.sig release/$$REL/$$REL.sig; \
 	echo "Creating release/$$REL/$$REL.zip"; \
 	zip -rq release/$$REL/$$REL.zip $$REL; \
 	rm -rf $$REL
@@ -126,7 +144,4 @@ dist: ${DISTFILES}
 tagall:
 	@REL=`sed -e '/char version/!d' -e 's/[^0-9.]*\([0-9.]*\).*/v\1/' -e q ${srcdir}/version.c`; \
 	echo "tagging $$REL"; \
-	for f in ${srcdir}/RCS/*,v; do \
-	  REV=`co -p $$f 2>&1 | sed -e '1d' -e '3,$$d' -e 's/revision //'`; \
-	  ${RCS} -N$$REL:$$REV $$f; \
-	done
+	$(GIT) tag -a -f -m "$$REL" "$$REL"
