--- a/libexec/mport.check-for-older/Makefile
+++ b/libexec/mport.check-for-older/Makefile
@@ -1,13 +1,13 @@
 PROG= mport.check-for-older
 
-CFLAGS+=	-I ../../libmport/ -fblocks
+CFLAGS+=	-I ../../libmport/
 WARNS?= 	4
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread
+LIBADD= mport pthread
 
-LDFLAGS += -L../libmport -lmport -ldispatch -lBlocksRuntime -lpthread
+LDFLAGS += -L../libmport -lmport -lpthread
 
 BINDIR=/usr/libexec
 
