--- a/libexec/mport.merge/Makefile
+++ b/libexec/mport.merge/Makefile
@@ -1,13 +1,13 @@
 PROG= mport.merge
 
-CFLAGS+=	-I${.CURDIR}/../../libmport/ -fblocks
+CFLAGS+=	-I${.CURDIR}/../../libmport/
 WARNS?= 	4
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread
+LIBADD= mport pthread
 
-LDFLAGS += -L../libmport -lmport -ldispatch -lBlocksRuntime -lpthread
+LDFLAGS += -L../libmport -lmport -lpthread
 
 BINDIR=/usr/libexec
 
