--- a/libexec/mport.query/Makefile
+++ b/libexec/mport.query/Makefile
@@ -1,13 +1,13 @@
 PROG= mport.query
 
-CFLAGS+=	-I${.CURDIR}/../../libmport/ -fblocks
+CFLAGS+=	-I${.CURDIR}/../../libmport/
 WARNS?= 	4
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread sqlite3
+LIBADD= mport pthread sqlite3
 
-LDFLAGS += -L../libmport -lmport -ldispatch -lBlocksRuntime -lpthread -lsqlite3
+LDFLAGS += -L../libmport -lmport -lpthread -lsqlite3
 
 BINDIR=/usr/libexec
 
