--- a/libexec/mport.update/Makefile
+++ b/libexec/mport.update/Makefile
@@ -5,9 +5,9 @@ WARNS?= 	4
 
 MK_MAN= no
 
-LIBADD= mport dispatch BlocksRuntime pthread
+LIBADD= mport pthread
 
-LDFLAGS += -L../libmport -lmport -ldispatch -lBlocksRuntime -lpthread
+LDFLAGS += -L../libmport -lmport -lpthread
 
 BINDIR=/usr/libexec
 
