--- a/lib/libpmc/Makefile
+++ b/lib/libpmc/Makefile
@@ -1,19 +1,12 @@
 # $FreeBSD$
 
-PACKAGE=lib${LIB}
-LIB=	pmc
+LIB_CXX= pmc
 
 SRCS=	libpmc.c pmclog.c libpmc_pmu_util.c libpmc_json.cc
 INCS=	pmc.h pmclog.h pmcformat.h
 
 CFLAGS+= -I${.CURDIR}
 CWARNFLAGS.gcc+= -Wno-shadow -Wno-cast-align
-.include <bsd.compiler.mk>
-.if ${COMPILER_TYPE} == "gcc"
-LDADD+=	-lstdc++
-.else
-LDADD+=	-lc++
-.endif
 
 .if ${MACHINE_ARCH} == "amd64" || ${MACHINE_ARCH} == "i386"
 
