--- a/etc/defaults/Makefile
+++ b/etc/defaults/Makefile
@@ -1,6 +1,6 @@
 .include <src.opts.mk>
 
-FILES=	devfs.rules periodic.conf rc.conf
+FILES=	periodic.conf rc.conf
 FILESDIR= /etc/defaults
 
 .include <bsd.prog.mk>
