--- a/usr.sbin/periodic/periodic.conf
+++ b/usr.sbin/periodic/periodic.conf
@@ -77,6 +77,10 @@ daily_backup_passwd_enable="YES"			# Backup passwd & group
 # 210.backup-aliases
 daily_backup_aliases_enable="YES"			# Backup mail aliases
 
+# 220.backup-pkgdb
+daily_backup_pkgdb_enable="YES"				# Backup /var/db/mport
+daily_backup_pkgdb_dir="/var/backups"
+
 # 221.backup-gpart
 if [ $(sysctl -n security.jail.jailed) = 0 ]; then
         # Backup partition table/boot partition/MBR
@@ -162,12 +166,6 @@ daily_status_mail_rejects_enable="YES"			# Check mail rejects
 daily_status_mail_rejects_logs=3			# How many logs to check
 daily_status_mail_rejects_shorten="NO"			# Shorten output
 
-# 480.leapfile-ntpd
-daily_ntpd_leapfile_enable="YES"			# Fetch NTP leapfile
-
-# 480.status-ntpd
-daily_status_ntpd_enable="NO"				# Check NTP status
-
 # 500.queuerun
 daily_queuerun_enable="YES"				# Run mail queue
 daily_submit_queuerun="YES"				# Also submit queue
@@ -207,6 +205,9 @@ weekly_whatis_enable="YES"				# Update whatis weekly
 # 340.noid
 weekly_noid_enable="NO"					# Find unowned files
 weekly_noid_dirs="/"					# Look here
+
+# 350.msearch
+weekly_msearch_enable="NO"				# Update msearch weekly
 
 # 450.status-security
 weekly_status_security_enable="YES"			# Security check
