--- a/release/Makefile.azure
+++ b/release/Makefile.azure
@@ -16,10 +16,6 @@ AZURE${VAR}!=	grep -E ^AZURE${VAR} ${AZURE_UPLOAD_CONF} | awk -F'	' '{print $$2}
 . endfor
 .endif
 
-.if ${BRANCH} == "STABLE" || ${BRANCH} == "CURRENT" || ${BRANCH} == "PRERELEASE"
-SNAPSHOT_DATE!=		date +-%Y-%m-%d
-.endif
-
 AZURE_TARGET:=		${OSRELEASE}${SNAPSHOT_DATE}.vhd
 
 azure-upload:		${AZURE_UPLOAD_TGTS}
@@ -34,10 +30,7 @@ azure-check-depends:
 .if !exists(/usr/local/bin/azure)
 . if !exists(/usr/local/bin/npm)
 .  if !exists(${PORTSDIR}/www/npm/Makefile)
-.   if !exists(/usr/local/sbin/pkg-static)
-	env ASSUME_ALWAYS_YES=yes pkg bootstrap -yf
-.   endif
-	env ASSUME_ALWAYS_YES=yes pkg install -y www/npm
+	env ASSUME_ALWAYS_YES=yes mport install npm
 .  else
 	make -C ${PORTSDIR}/www/npm BATCH=1 all install clean
 .  endif
