--- a/release/Makefile.ec2
+++ b/release/Makefile.ec2
@@ -1,13 +1,8 @@
 #
-# $FreeBSD$
-#
 #
 # Makefile for creating an EC2 AMI from a disk image.
 #
 
-.if ${BRANCH} == "CURRENT" || ${BRANCH} == "STABLE" || ${BRANCH} == "PRERELEASE"
-AMINAMESUFFIX!=	date +-${BUILDDATE}
-.endif
 .if defined(EC2PUBLIC) && !empty(EC2PUBLIC)
 PUBLISH=	--public
 .endif
@@ -44,10 +39,7 @@ cw-ec2-portinstall:
 .if exists(${PORTSDIR}/net/bsdec2-image-upload/Makefile)
 	env - UNAME_r=${UNAME_r} PATH=$$PATH make -C ${PORTSDIR}/net/bsdec2-image-upload BATCH=1 all install clean
 .else
-. if !exists(/usr/local/sbin/pkg-static)
-	env ASSUME_ALWAYS_YES=yes pkg bootstrap -y
-. endif
-	env ASSUME_ALWAYS_YES=yes pkg install -y net/bsdec2-image-upload
+	env ASSUME_ALWAYS_YES=yes mport install bsdec2-image-upload
 .endif
 	@touch ${.TARGET}
 
