restore cd behaivor from 2.x

--- a/sbin/devfs/devfs.conf
+++ b/sbin/devfs/devfs.conf
@@ -32,8 +32,8 @@
 # Examples:
 
 # Commonly used by many ports
-#link	cd0	cdrom
-#link	cd0	dvd
+link   cd0     cdrom
+link   cd0     dvd
 
 # Allow a user in the wheel group to query the smb0 device
 #perm	smb0	0660
