fix libmport audit.c incluson

--- a/lib/libmport/Makefile
+++ b/lib/libmport/Makefile
@@ -6,7 +6,7 @@ MPORTDIR= ${SRCTOP}/contrib/mport
 
 LIB=	mport
 SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
-        util.c error.c \
+        audit.c util.c error.c \
         info.c install_primative.c instance.c \
 	version_cmp.c check_preconditions.c delete_primative.c \
 	default_cbs.c  merge_primative.c bundle_read_install_pkg.c \
