--- a/secure/usr.bin/sftp/Makefile
+++ b/secure/usr.bin/sftp/Makefile
@@ -1,10 +1,9 @@
-# $FreeBSD$
-
 .include <src.opts.mk>
 .include "${SRCTOP}/secure/ssh.mk"
 
 PROG=	sftp
-SRCS=   sftp.c sftp-client.c sftp-common.c sftp-glob.c progressmeter.c
+SRCS=   sftp.c sftp-client.c sftp-common.c sftp-glob.c sftp-usergroup.c \
+	progressmeter.c
 PACKAGE=	ssh
 
 LIBADD=	ssh edit
