--- a/etc/mtree/BSD.var.dist
+++ b/etc/mtree/BSD.var.dist
@@ -45,7 +45,7 @@
         ..
         mtree
         ..
-        ntp             uname=ntpd gname=ntpd
+        ntp             uname=_ntp gname=_ntp
         ..
         mport
             downloads
